--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "framer-motion": "^12.23.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "recharts": "^3.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
